# datafusion-delta-queries

./: Cargo.toml
src/: delta_node.rs  lib.rs
src/optimizer_rules/: mod.rs
