[package]
name = "datafusion-delta-queries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion-expr = "31.0.0"
datafusion-optimizer = "31.0.0"

[dev-dependencies]
arrow-schema = "46.0.0"
datafusion = "31.0.0"
tokio = { version = "1" }
